force-app/main/default/objects/OrderItem/fields/Applied_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Applied_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>