force-app/main/default/objects/OrderItem/fields/Cross_Discount_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Cross_Discount_Product_Id__c</fullName>
    <label>Cross Discount Product Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>