force-app/main/default/objects/OrderItem/fields/Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Record_Type__c</fullName>
    <formula>Order.Order_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Record Type</label>
    <type>Text</type>
</CustomField>